<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.ird</groupId>
    <artifactId>jpe</artifactId>
    <version>1.0.0</version>
    <packaging>war</packaging>

    <name>JPE</name>
    <description>Projet JPE: création d'une interface de visualisation et de téléchargement des données du JPE.</description>
    <inceptionYear>2014</inceptionYear>
    <organization>
        <name>Observatoire Thonier - IRD</name>
        <url>http://www.ird.fr/</url>
    </organization>
    <licenses>
        <license>
            <name>General Public License (GPL)</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>lebranch</id>
            <name>Julien Lebranchu</name>
            <email>julien dot lebranchu at ird dot fr</email>
            <organization>IRD</organization>
            <organizationUrl>http://www.ird.fr</organizationUrl>
            <roles>
                <role>lead</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Paris</timezone>
        </developer>
    </developers>

    <properties>        
        <spring.version>4.1.0.RELEASE</spring.version>        
        <thymeleaf.version>2.1.3.RELEASE</thymeleaf.version>
        <servlet.version>3.1.0</servlet.version>
        <junit.version>4.11</junit.version>
        <jackson.version>2.5.3</jackson.version>
    </properties>
    <dependencies>
        <!-- Spring framework -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
            <version>1.7.1.RELEASE</version>
        </dependency>
        <!-- Thymeleaf -->
        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf</artifactId>
            <version>${thymeleaf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf-spring4</artifactId>
            <version>${thymeleaf.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.co.gcwilliams</groupId>
            <artifactId>jodatime-thymeleaf-dialect</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
            <version>1.2.7</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.nekohtml</groupId>
            <artifactId>nekohtml</artifactId>
            <version>1.9.22</version>
        </dependency>
        <dependency>
            <groupId>com.github.theborakompanioni</groupId>
            <artifactId>thymeleaf-extras-shiro</artifactId>
            <version>1.2.1</version>
        </dependency>

        <!-- Servlet -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>${servlet.version}</version>
            <scope>provided</scope>
        </dependency>        
        
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>ird-common</artifactId>
            <version>1.2</version>
            <type>jar</type>
        </dependency>
                
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>5.1.3.Final</version>
            <type>jar</type>
        </dependency>

        <!-- Data Mapper package is a high-performance data binding package built
        on Jackson JSON processor -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-joda</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        
        
        <!--Security: Shiro-->
        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-spring</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>fr.ird</groupId>
            <artifactId>aas</artifactId>
            <version>1.4.0</version>
            <type>jar</type>
        </dependency>
        
        <!-- Apache Commons FileUpload -->
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.3.1</version>
        </dependency>
 
        <!-- Apache Commons IO -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>

        <dependency>
            <groupId>fr.ird</groupId>
            <artifactId>driver-eva</artifactId>
            <version>1.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>fr.ird</groupId>
            <artifactId>eva-core</artifactId>
            <version>1.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.vividsolutions</groupId>
            <artifactId>jts</artifactId>
            <version>1.13</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-main</artifactId>
            <version>12-RC1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.googlecode.wicked-charts</groupId>
            <artifactId>wicked-charts-highcharts</artifactId>
            <version>1.5.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>fr.ird</groupId>
            <artifactId>highcharts</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geojson</artifactId>
            <version>12-RC1</version>
            <type>jar</type>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}##${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>8.1.9.v20130131</version>
                <configuration>
                    <stopKey>STOP</stopKey>
                    <stopPort>9998</stopPort>
                    <scanIntervalSeconds>5</scanIntervalSeconds>
                    <connectors>
                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                            <port>9000</port>
                            <maxIdleTime>60000</maxIdleTime>
                        </connector>
                    </connectors>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5</version>                    
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <!--            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.4</version>
                <configuration>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.8</version>
                            <reportSets>
                                <reportSet>
                                    <reports></reports>
                                </reportSet>
                            </reportSets>
                        </plugin>
                        <plugin>
                            <groupId>com.stratio.maven</groupId>
                            <artifactId>sphinx-maven-plugin</artifactId>
                            <version>2.0.0</version>
                            <configuration>
                                <fork>true</fork>
                                <argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
                                <builders>
                                    <entry>html</entry>
                                </builders>
                                <resources>
                                    <resource>
                                        <directory>src/site/sphinx</directory>
                                        <filtering>true</filtering>
                                        <includes>
                                            <include>conf.py</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </plugin>
                                                <plugin>
                            <groupId>com.stratio.maven</groupId>
                            <artifactId>sphinx-maven-plugin</artifactId>
                            <version>2.0.0</version>
                            <configuration>
                                <fork>true</fork>
                                <argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
                                <builders>
                                    <entry>pdf</entry>
                                </builders>
                                <outputDirectory>${project.reporting.outputDirectory}/pdf</outputDirectory>
                            </configuration>
                        </plugin>
                    </reportPlugins>
                </configuration>
            </plugin> -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <configuration>
                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>

                    <!-- <docletPath>/path/to/UmlGraph.jar</docletPath> -->
                    <docletArtifact>
                        <groupId>org.umlgraph</groupId>
                        <artifactId>umlgraph</artifactId>
                        <version>5.6.6</version>
                    </docletArtifact>
                    <additionalparam>
                        -inferrel -inferdep -quiet -hide java.* -hide org.eclipse.* -collpackages java.util.* -postfixpackage
                        -nodefontsize 9 -nodefontpackagesize 7 -attributes -types -visibility -operations -constructors
                        -enumerations -enumconstants -views
                    </additionalparam>
                    <useStandardDocletOptions>true</useStandardDocletOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
   
        <!--        <repository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net repository</name>
            <url>http://download.java.net/maven/2</url>
        </repository>-->
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>boundless</id>
            <name>Boundless Maven Repository</name>
            <url>http://repo.boundlessgeo.com/main</url>
        </repository>
        <!-- Geotk 3.21 not available in Central repository -->
        <!--        <repository>
            <id>geotoolkit</id>
            <name>Geotk Modules</name>
            <url>http://maven.geotoolkit.org/org/geotoolkit/</url>
            <layout>default</layout>
        </repository>-->
        

    </repositories>
</project>
